test/fail/let-else-actor-field.mo
actor {
  public let x = shared func() {} else { assert false; loop () };
};
